--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "akinatorpy"
+name = "py-akinator"
 version = "0.0.1"
 authors = [
     {name = "Rio", email = "contact@devrio.org"},
