--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,13 +17,16 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-            python-version: "3.10"
+          python-version: "3.10"
 
       - run: python -m pip install build
 
       - run: python -m build
 
-      - uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.AKINATOR }}
 
       - uses: softprops/action-gh-release@v1
         with:
